--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -2,8 +2,8 @@
 #default_locale: en
 #locales: 
 #  $ref: locales.yml
-name: "JazzHub project toolchain"
-description: "With this toolchain, you can bookmark existing tools in your [JazzHub project](https://hub.jazz.net). \n\nTo get started, click **Create**."
+name: "WebService project toolchain"
+description: "With this toolchain, you can bookmark existing tools in your WebService. \n\nTo get started, click **Create**."
 version: 0.1
 # Generate base64 representation of image at http://www.askapache.com/online-tools/base64-image-converter/
 image: data:image/png;base64,$file(jazzhub-toolchain.png,base64)
