--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -8,29 +8,31 @@ version: 0.1
 # Generate base64 representation of image at http://www.askapache.com/online-tools/base64-image-converter/
 image: data:image/png;base64,$file(jazzhub-toolchain.png,base64)
 required: 
- - ccm
- - git
- - pipeline
+ - jira
+ - gitlab
  - webide
+ - jenkins
+ - artifactory
+ - sonarqube
 
-ccm:
+jira:
   service_id: customtool
   parameters:
-    type: Track & Plan
+    type: Jira
     lifecyclePhase: "THINK"
-    imageUrl: https://www.ibm.com/cloud-computing/bluemix/images/catalog-trackplan.png
+    imageUrl: http://product.twoodo.com/wp-content/uploads/2015/04/jira-icon.png
     documentationUrl:
     name: "{{name}}"
     dashboard_url:
     description:
     additional-properties:
   
-git:
+gitlab:
   service_id: customtool
   parameters:
-    type: Hosted Git
+    type: GitLab
     lifecyclePhase: "CODE"
-    imageUrl: https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png
+    imageUrl: https://about.gitlab.com/images/new_logo/A.jpg
     documentationUrl:
     name: "{{name}}"
     dashboard_url:
@@ -49,16 +51,38 @@ webide:
     description:
     additional-properties:
     
-pipeline:
+jenkins:
   service_id: customtool
   parameters:
-    type: Delivery Pipeline
+    type: Jenkins
     lifecyclePhase: "DELIVER"
-    imageUrl: https://www.ibm.com/cloud-computing/bluemix/images/catalog-deliverypipeline.png
+    imageUrl: https://wiki.jenkins-ci.org/download/attachments/2916393/logo.png?version=1&modificationDate=1302753947000
     documentationUrl:
     name: "{{name}}"
     dashboard_url:
     description:
     additional-properties:
   
+artifactory:
+  service_id: customtool
+  parameters:
+    type: Artifactory
+    lifecyclePhase: "DELIVER"
+    imageUrl: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0xXNyDi1lKDC_ohLgf_ZP_uC-O1cLkYC-Oyb52H1BSr8HoJD9
+    documentationUrl:
+    name: "{{name}}"
+    dashboard_url:
+    description:
+    additional-properties:
 
+sonarqube:
+  service_id: customtool
+  parameters:
+    type: Sonarqube
+    lifecyclePhase: "DELIVER"
+    imageUrl: https://www.google.co.in/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjBvuOct_vOAhUCTY8KHRxGAjQQjRwIBw&url=http%3A%2F%2Fdocs.sonarqube.org%2Fdisplay%2FSONAR%2FDocumentation&bvm=bv.131783435,d.c2I&psig=AFQjCNE6rDBmErYOZwxQfqwiUZ9wvMAqIw&ust=1473274902035221
+    documentationUrl:
+    name: "{{name}}"
+    dashboard_url:
+    description:
+    additional-properties:
