--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -41,6 +41,11 @@ gitlab:
 #Web IDE
 webide:
   service_id: orion
+  
+#Slack
+messaging:
+  service_id: slack
+  include: slack.yml
     
 jenkins:
   service_id: customtool
