--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -46,6 +46,11 @@ webide:
 messaging:
   service_id: slack
   include: slack.yml
+  
+#Sauce Labs
+test:
+  service_id: saucelabs
+  include: saucelabs.yml
     
 jenkins:
   service_id: customtool
