--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -47,14 +47,14 @@ webide:
   service_id: orion
 
 #Slack
-messaging:
-  service_id: slack
-  include: slack.yml
+#messaging:
+  #service_id: slack
+  #include: slack.yml
   
 #Sauce Labs
-test:
-  service_id: saucelabs
-  include: saucelabs.yml
+#test:
+  #service_id: saucelabs
+  #include: saucelabs.yml
   
 #Deployment Risk Analytics
 dra:
