--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -19,6 +19,15 @@ required:
  - urbancodedeploy
 
 services:
+
+sample-repo:
+    service_id: hostedgit
+    parameters:
+      repo_name: '{{toolchain.name}}'
+      repo_url: 'https://git.ng.bluemix.net/{{toolchain.name}}/{{toolchain.name}}'
+      type: link
+      enable_traceability: true
+
 jira:
   service_id: customtool
   parameters:
